# gemini-paprika2

./: .gitignore  README.md  flutter_rust_bridge.yaml
.github/workflows/: build_and_test.yml
chart_core/: Cargo.toml  build.rs
chart_core/src/: aggregator.rs  api.rs  lib.rs
chart_core/src/adapters/: coinbase.rs  mod.rs
chart_core/src/models/: coinbase.rs  mod.rs
flutter_app/: pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/lib/: main.dart
flutter_app/lib/widgets/: chart_widget.dart
ios/: ExportOptions.plist
protos/: candle.proto  price_update.proto
