# Created by Gemini - CORRECTED VERSION
[package]
name = "chart_core"
version = "0.1.0"
edition = "2021"
authors = ["Gemini AI <gemini@google.com>"]
description = "Core business logic for the real-time crypto charting application."

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
async-trait = "0.1"
lazy_static = "1.4"

# THE FIX IS HERE: Added the missing `anyhow` dependency.
anyhow = "1.0"


[build-dependencies]
prost-build = "0.12"